# teleform

./: .gitignore  AGENTS.md  Cargo.toml  DEVLOG.md  README.md  default_store.json  infrastructure.json
crates/example/: Cargo.toml
crates/example-lambda/: Cargo.toml
crates/example-lambda/src/: main.rs
crates/example/src/: main.rs
crates/teleform/: Cargo.toml
crates/teleform-derive/: Cargo.toml
crates/teleform-derive/src/: lib.rs  v2.rs
crates/teleform-example/: Cargo.toml
crates/teleform-example/src/: main.rs
crates/teleform/src/: has_dependencies_impl.rs  lib.rs  remote.rs  rework.rs  test.rs  utils.rs  v2.rs
crates/teleform/src/aws/: acm.rs  apigatewayv2.rs  cloudfront.rs  dynamodb.rs  lambda.rs  mod.rs  route53.rs  s3.rs
crates/teleform/src/aws/iam/: mod.rs
crates/teleform/src/rework/: remote.rs
crates/teleform/src/v2/: has_dependencies_impl.rs  remote.rs  test.rs
