[package]
name = "teleform-derive"
version = "0.1.0"
description = "Teleform-Derive provides procedural macros for the Teleform library, enabling easy implementation of traits for Infrastructure as Code (IaC) in Rust."
license = "MIT"
repository = "https://github.com/schell/teleform"
homepage = "https://github.com/schell/teleform"
documentation = "https://docs.rs/teleform-derive"
keywords = ["iac", "infrastructure", "dag", "terraform", "pulumi"]
categories = ["command-line-utilities", "command-line-interface", "web-programming"]
readme = "../../README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = { version = "^2.0", features = ["extra-traits", "parsing"] }
