[package]
name = "teleform-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "infra"
path = "src/main.rs"

[dependencies]
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
teleform.workspace = true
tokio.workspace = true
