[package]
name = "teleform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tele"

[dependencies]
anyhow = "^1.0"
aws-config = "^0.56"
aws-sdk-acm = "^0.33"
aws-sdk-apigatewayv2 = "^0.33"
aws-sdk-cloudfront = "^0.33"
aws-sdk-dynamodb = "^0.33"
aws-sdk-iam = "^0.33"
aws-sdk-lambda = "^0.33"
aws-sdk-rds = "^0.33"
aws-sdk-route53 = "^0.33"
aws-sdk-s3 = "^0.33"
aws-sdk-secretsmanager = "^0.33"
data-encoding = "^2.4"
log = "^0.4"
pretty_assertions = "^1.4"
ring = "^0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
teleform-derive = { version = "0.1.0", path = "../teleform-derive" }
tokio = { version = "1", features = ["full"] }