[package]
name = "teleform"
version = "0.1.2"
edition = "2021"
description = "Teleform is a Rust library for Infrastructure as Code (IaC), providing a flexible alternative to Terraform and Pulumi."
license = "MIT"
repository = "https://github.com/schell/teleform"
homepage = "https://github.com/schell/teleform"
documentation = "https://docs.rs/teleform"
keywords = ["iac", "infrastructure", "dag", "terraform", "pulumi"]
categories = ["command-line-utilities", "command-line-interface", "web-programming"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tele"

[dependencies]
anyhow.workspace = true
dagga.workspace = true
data-encoding.workspace = true
log.workspace = true
ring.workspace = true
serde.workspace = true 
serde_json.workspace = true
snafu.workspace = true
teleform-derive.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger.workspace = true
random.workspace = true
